# rust-selenium-beginners

./: Cargo.toml  README.md
src/: main.rs
tests/: 01_url_navigation.rs  02_fill_text.rs  03_set_dropdown.rs  04_enable_checkbox.rs  05_click_button.rs  06_form_validation.rs  07_form_submit_success.rs  08_hover.rs  09_count_rows.rs  10_table_text.rs  11_consolidated_test.rs
